syntax = "proto3";

service VotingService {
    rpc Vote (VoteRequest) returns (VoteResponse);
    rpc StreamResults (stream ResultsRequest) returns (stream VoteCount);
}

message VoteRequest {
    string user = 1;
    string drawing_id = 2;
}

message VoteResponse {
    string message = 1;
}

message ResultsRequest {
    string user = 1;
}

message VoteCount {
    string drawing_id = 1;
    int32 count = 2;
}